update header & footer snippets

--- a/src/client/custom-css.html
+++ b/src/client/custom-css.html
@@ -30,6 +30,25 @@ h2 {
 font-family: "Andes", sans-serif;
 }
 
+.uvPageHeader {
+margin-bottom: 10px;
+min-height: 39px;
+}
+
+body.uv-primaryColor-dark {
+background: #fff !important;
+margin: 0px 0px 20px;
+padding: 0px;
+text-align: center;
+/*workaround for centering div in IE*/
+}
+
+.uvBody {
+background: #fff !important;
+border-top: none;
+padding: 25px 0;
+margin: 0 auto;
+}
 
 #custom-buttons a {
 float: left;
@@ -41,7 +60,7 @@ font-size: 15px;
 font-weight: bold;
 text-decoration: none;
 margin-right: 7px;
-padding: 10px 10px 10px 38px;
+padding: 10px 10px 10px 10px;
 width: 175px;
 height: 60px;
 text-align: center;
