--- a/src/client/head.html
+++ b/src/client/head.html
@@ -4,3 +4,31 @@
 <link href="css/loop-min.css" rel='stylesheet' type='text/css'>
 <link type="text/css" rel="stylesheet" media="all" href="//icsid.worldbank.org/sites/default/files/uv/uv-style2.css" />
 <link type="text/css" rel="stylesheet" media="all" href="//icsid.worldbank.org/sites/default/files/uv/network.css" />
+
+<link rel="canonical" href="http://localhost:4444/header-footer/en-header-footer/">
+<!--[if lt IE 9]>
+<script src="/assets/js/vendor/html5shiv.js"></script>
+<![endif]-->
+<!-- Favicons
+================================================== -->
+<!-- 128x128 -->
+<link rel="shortcut icon" type="image/ico" href="../content/dam/loop/assets/img/favicon.ico@cache=no">
+<link rel="icon" type="image/png" href="../content/dam/loop/assets/img/favicon.png@cache=no">
+<!-- 192x192, as recommended for Android
+http://updates.html5rocks.com/2014/11/Support-for-theme-color-in-Chrome-39-for-Android
+-->
+<link rel="icon" type="image/png" sizes="192x192" href="../content/dam/loop/assets/img/favicon.png@cache=no">
+<!-- 57x57 (precomposed) for iPhone 3GS, pre-2011 iPod Touch and older Android devices -->
+<link rel="apple-touch-icon-precomposed" href="../content/dam/loop/assets/img/favicon.png@cache=no">
+<!-- 72x72 (precomposed) for 1st generation iPad, iPad 2 and iPad mini -->
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="../content/dam/loop/assets/img/favicon.png@cache=no">
+<!-- 114x114 (precomposed) for iPhone 4, 4S, 5 and post-2011 iPod Touch -->
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="../content/dam/loop/assets/img/favicon.png@cache=no">
+<!-- 144x144 (precomposed) for iPad 3rd and 4th generation -->
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="../content/dam/loop/assets/img/favicon.png@cache=no">
+<!-- CSS
+================================================== -->
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&amp;display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&amp;display=swap" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="../content/dam/loop/assets/css/default.css@cache=no.css">
+<link rel="stylesheet" type="text/css" href="../content/dam/loop/assets/css/header-footer.css@cache=no.css">
