--- a/src/client/footer.html
+++ b/src/client/footer.html
@@ -11,58 +11,49 @@
                   <ul>
                     <li><a href="https://www.worldbank.org/en/about">About</a></li>
                     <li><a href="https://data.worldbank.org">Data</a></li>
-                    <li><a href="https://www.worldbank.org/en/research">Research and
-                        Publications</a></li>
+                    <li><a href="https://www.worldbank.org/en/research">Research and Publications</a></li>
                     <li><a href="https://olc.worldbank.org">Learning</a></li>
                   </ul>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                   <ul>
                     <li><a href="https://www.worldbank.org/en/news">News</a></li>
-                    <li><a href="https://projects.worldbank.org/?lang=en">Projects and
-                        Operations</a></li>
-                    <li><a href="https://www.worldbank.org/en/where-we-work">Countries</a>
-                    </li>
+                    <li><a href="https://projects.worldbank.org/?lang=en">Projects and Operations</a></li>
+                    <li><a href="https://www.worldbank.org/en/where-we-work">Countries</a></li>
                     <li><a href="https://www.worldbank.org/en/topic">Topics</a></li>
                   </ul>
                 </div>
               </div>
             </div>
-          </div><!-- End left column footer menu section -->
+          </div>
+          <!-- End left column footer menu section -->
           <div class="col-lg-7 col-md-6 col-sm-12 col-xs-12">
             <hr class="visible-sm visible-xs">
             <div class="row">
               <div class="col-lg-6 col-md-12 col-sm-6 col-xs-12">
                 <div class="lp__social_icon">
-                  <div class="h6" aria-label="Follow us">FOLLOW US</div>
-
+                  <div class="h6" aria-label="Follow us">
+                    FOLLOW US
+                  </div>
                   <ul>
-
-                    <li><a href="https://www.facebook.com/worldbank" class="lp__socialimg">
-                        <img src="img/fb.svg" alt="World Bank Facebook" class="img-responsive"
-                          title="World Bank Facebook"></a>
-                    </li>
-                    <li><a href="https://www.twitter.com/worldbank" class="lp__socialimg">
-                        <img src="img/twitter.svg" alt="World Bank Twitter" class="img-responsive"
-                          title="World Bank Twitter"></a>
-                    </li>
-                    <li><a href="https://www.linkedin.com/company/the-world-bank" class="lp__socialimg">
-                        <img src="img/linkedln.svg" alt="World Bank LinkedIn" class="img-responsive"
-                          title="World Bank LinkedIn"></a>
-                    </li>
-                    <li><a href="https://instagram.com/worldbank/" class="lp__socialimg">
-                        <img src="img/instagram.svg" alt="World Bank Instagram" class="img-responsive"
-                          title="World Bank Instagram"></a>
-                    </li>
-                    <li><a href="https://www.youtube.com/user/WorldBank" class="lp__socialimg">
-                        <img src="img/youtube.svg" alt="World Bank YouTube" class="img-responsive"
-                          title="World Bank YouTube"></a>
-                    </li>
-                    <li><a href="https://www.flickr.com/photos/worldbank" class="lp__socialimg">
-                        <img src="img/flickr.svg" alt="World Bank Flickr" class="img-responsive"
-                          title="World Bank Flickr"></a>
-                    </li>
-
+                    <li><a href="https://www.facebook.com/worldbank" class="lp__socialimg"><img
+                          src="../content/dam/loop/assets/img/fb.svg" alt="World Bank Facebook" class="img-responsive"
+                          title="World Bank Facebook"></a></li>
+                    <li><a href="https://www.twitter.com/worldbank" class="lp__socialimg"><img
+                          src="../content/dam/loop/assets/img/twitter.svg" alt="World Bank Twitter"
+                          class="img-responsive" title="World Bank Twitter"></a></li>
+                    <li><a href="https://www.linkedin.com/company/the-world-bank" class="lp__socialimg"><img
+                          src="../content/dam/loop/assets/img/linkedln.svg" alt="World Bank LinkedIn"
+                          class="img-responsive" title="World Bank LinkedIn"></a></li>
+                    <li><a href="https://instagram.com/worldbank/" class="lp__socialimg"><img
+                          src="../content/dam/loop/assets/img/instagram.svg" alt="World Bank Instagram"
+                          class="img-responsive" title="World Bank Instagram"></a></li>
+                    <li><a href="https://www.youtube.com/user/WorldBank" class="lp__socialimg"><img
+                          src="../content/dam/loop/assets/img/youtube.svg" alt="World Bank YouTube"
+                          class="img-responsive" title="World Bank YouTube"></a></li>
+                    <li><a href="https://www.flickr.com/photos/worldbank" class="lp__socialimg"><img
+                          src="../content/dam/loop/assets/img/flickr.svg" alt="World Bank Flickr" class="img-responsive"
+                          title="World Bank Flickr"></a></li>
                   </ul>
                 </div>
               </div>
@@ -73,16 +64,14 @@
                     <form action="https://www.worldbank.org/en/newsletter-subscription?worldbankgroup=true" method="get"
                       id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
                       class="validate lp__input_group mySignUpFormDesktop" target="_blank" accept-charset="UTF-8"
-                      novalidate="">
-
-                      <input type="hidden" name="worldbankgroup" value="true">
-
+                      novalidate>
+                      <input type="hidden" name="worldbankgroup" value="true"
+                        src="http://theloop.worldbank.org/content/dam/loop">
                       <input type="email" placeholder="Enter email to subscribe..." class="search-input-field-1"
-                        id="Newsletter" name="email">
-                      <input class="submit-btn" name="subscribe" type="image" src="img/angle-right-white.svg"
-                        alt="submit">
+                        id="Newsletter" name="email" src="http://theloop.worldbank.org/content/dam/loop">
+                      <input class="submit-btn" name="subscribe" type="image"
+                        src="../content/dam/loop/assets/img/angle-right-white.svg" alt="submit">
                     </form>
-
                   </div>
                 </div>
                 <!-- Begin Language toggler -->
@@ -93,16 +82,13 @@
                       aria-expanded="false" id="lang-title" aria-labelledby="site-language lang-title">English</button>
                     <div class="lp__dropdown_menu dropdown-menu" aria-labelledby="site-language">
                       <ul>
-                        <li lang="es"><a class="dropdown-item" href="https://www.bancomundial.org/">Español</a>
-                        </li>
-                        <li lang="fr"><a class="dropdown-item" href="https://www.banquemondiale.org/">Français</a>
-                        </li>
+                        <li lang="es"><a class="dropdown-item" href="https://www.bancomundial.org/">Español</a></li>
+                        <li lang="fr"><a class="dropdown-item" href="https://www.banquemondiale.org/">Français</a></li>
                         <li lang="ar"><a class="dropdown-item" href="https://www.albankaldawli.org/">عربي</a></li>
-                        <li lang="ru"><a class="dropdown-item" href="https://www.vsemirnyjbank.org/">Русский</a>
-                        </li>
+                        <li lang="ru"><a class="dropdown-item" href="https://www.vsemirnyjbank.org/">Русский</a></li>
                         <li lang="zh"><a class="dropdown-item" href="https://www.shihang.org/">中文</a></li>
-                        <li><a class="dropdown-item" href="https://www.worldbank.org/en/language-resources">View
-                            All »</a></li>
+                        <li><a class="dropdown-item" href="https://www.worldbank.org/en/language-resources">View All
+                            »</a></li>
                       </ul>
                     </div>
                   </div>
@@ -111,7 +97,8 @@
               </div>
             </div>
           </div>
-        </div><!-- End right column footer follow and newsletter section -->
+        </div>
+        <!-- End right column footer follow and newsletter section -->
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="lp__footer_bottom">
@@ -119,37 +106,35 @@
                 <div class="col-lg-6 col-md-7 col-sm-12 col-xs-12">
                   <div class="lp__listinline">
                     <ul>
-                      <li class="disclaimer"><a href="https://www.worldbank.org/en/about/legal">Legal</a>
-                      </li>
+                      <li class="disclaimer"><a href="https://www.worldbank.org/en/about/legal">Legal</a></li>
                       <li class="disclaimer"><a href="https://www.worldbank.org/en/about/legal/privacy-notice">Privacy
                           Notice</a></li>
                       <li class="disclaimer"><a href="https://www.worldbank.org/en/who-we-are/site-accessibility">Site
                           Accessibility</a></li>
-                      <li class="disclaimer"><a href="https://www.worldbank.org/en/access-to-information">Access
-                          to Information</a></li>
-                      <li class="disclaimer"><a href="https://www.worldbank.org/en/about/careers">Jobs</a>
-                      </li>
-                      <li class="disclaimer"><a href="https://www.worldbank.org/en/about/contacts">Contact</a>
-                      </li>
+                      <li class="disclaimer"><a href="https://www.worldbank.org/en/access-to-information">Access to
+                          Information</a></li>
+                      <li class="disclaimer"><a href="https://www.worldbank.org/en/about/careers">Jobs</a></li>
+                      <li class="disclaimer"><a href="https://www.worldbank.org/en/about/contacts">Contact</a></li>
                     </ul>
                   </div>
-                </div><!-- End disclaimer-->
+                </div>
+                <!-- End disclaimer-->
                 <div class="col-lg-6 col-md-5 col-sm-12 col-xs-12">
                   <div class="lp__footer_fraud">
                     <ul>
-                      <li><a href="https://www.worldbank.org/en/about/legal/scams">SCAM
-                          ALERT</a></li>
+                      <li><a href="https://www.worldbank.org/en/about/legal/scams">SCAM ALERT</a></li>
                       <li><a
                           href="https://wbgcmsprod.microsoftcrmportals.com/en-US/anonymous-users/int-fraud-management/create-new-complaint/">REPORT
                           FRAUD OR CORRUPTION</a></li>
                     </ul>
                   </div>
-
                 </div>
               </div>
-            </div><!-- End disclaimer and copy right -->
+            </div>
+            <!-- End disclaimer and copy right -->
           </div>
-        </div><!-- End footer Bottom row -->
+        </div>
+        <!-- End footer Bottom row -->
       </div>
     </div>
   </div>
@@ -158,15 +143,12 @@
   <div class="row full-row-footer-black-components">
     <div class="container">
       <div class="row">
-
         <div class="lp__footer_bottom_left">
           <div class="col-md-12 col-sm-12 col-xs-12">
-
             <ul>
-              <li><a href="https://www.worldbank.org/">
-                  <img src="img/logo-wbg-footer-en.svg" class="footer-logo" title="World Bank Group logo"
-                    alt="World Bank Group logo"></a>
-              </li>
+              <li><a href="https://www.worldbank.org/"> <img
+                    src="http://theloop.worldbank.org/content/dam/loop/assets/img/logo-wbg-footer-en.svg"
+                    class="footer-logo" title="World Bank Group logo" alt="World Bank Group logo"></a> </li>
               <li><a class="lp__wbgpartnership" title="International Bank for Reconstruction and Development"
                   href="https://www.worldbank.org/en/who-we-are/ibrd">IBRD</a></li>
               <li><a class="lp__wbgpartnership" title="International Development Association"
@@ -178,27 +160,25 @@
               <li><a class="lp__wbgpartnership" title="International Centre for Settlement of Investment Disputes"
                   href="https://icsid.worldbank.org/">ICSID</a></li>
             </ul>
-
-
           </div>
-        </div><!-- End logo and Wbg partnership -->
-
-
+        </div>
+        <!-- End logo and Wbg partnership -->
         <div class="lp__copyright">
           <div class="col-md-12 col-sm-12 col-xs-12">
-            © <span id="footer-year"></span>
+            ©
+            <span id="footer-year"></span>
             <script language="JavaScript">
               <!-- Begin
-                                      var time=new Date();
-                                      var year=time.getYear();
-                                      if (year < 2000)
-                                      year = year + 1900;
+                                                  var time=new Date();
+                                                  var year=time.getYear();
+                                                  if (year < 2000)
+                                                  year = year + 1900;
               document.getElementById("footer-year").innerHTML = year;
-                                      // End -->
-            </script>
-            The World Bank Group, All Rights Reserved.
+                                                  // End -->
+            </script> The World Bank Group, All Rights Reserved.
           </div>
-        </div><!-- End dropdown and fraud  -->
+        </div>
+        <!-- End dropdown and fraud  -->
       </div>
     </div>
   </div>
