add loop icons & edit header/footer

--- a/src/client/custom-css.html
+++ b/src/client/custom-css.html
@@ -66,3 +66,26 @@ height: 60px;
 text-align: center;
 line-height: 18px;
 }
+
+.lp__navbar_toggle[aria-expanded=false]:after {
+font-family: "" !important;
+content: "" !important;
+font-size: 20px;
+color: #DF3416;
+float: right;
+}
+
+.lp__navbar_default .lp__navbar_toggle {
+padding: 0 !important;
+}
+
+.lp__navbar_toggle {
+padding: 0px !important;
+}
+
+.lp-footer-lang-dropdown .lang-filter-label[aria-expanded=false]:after {
+content: "" !important;
+font-size: 0.75rem;
+color: #ffffff;
+float: right;
+}
