--- a/src/client/footer.html
+++ b/src/client/footer.html
@@ -79,7 +79,8 @@
                   <span class="lang-lable" id="site-language">This Site in:</span>
                   <div class=" lp-lang-toggler">
                     <button type="button" class="lang-filter-label" data-toggle="dropdown" aria-haspopup="true"
-                      aria-expanded="false" id="lang-title" aria-labelledby="site-language lang-title">English</button>
+                      aria-expanded="false" id="lang-title" aria-labelledby="site-language lang-title">English
+                      <img style="height: 19px; width: 15px;" src="loop-angle-down.svg" /></button>
                     <div class="lp__dropdown_menu dropdown-menu" aria-labelledby="site-language">
                       <ul>
                         <li lang="es"><a class="dropdown-item" href="https://www.bancomundial.org/">Español</a></li>
