--- a/src/client/header.html
+++ b/src/client/header.html
@@ -14,7 +14,9 @@
                   <div class="lp__menuButton">
                         <button type="button" class="lp__navbar_toggle collapsed" data-toggle="collapse"
                               data-target="#menuItems" aria-expanded="false" aria-controls="menuItems"
-                              aria-label="menu"> </button>
+                              aria-label="menu">
+                              <img style="height: 33px; width: 37px;" src="loop-bars.svg" />
+                        </button>
                   </div>
                   <!-- End toggle menu Section -->
                   <div class="lp__menulist_wrappper visible-sm visible-xs visible-md">
